# discord-bot-zundamon

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: Dockerfile  serve.py
app/copilot/: .workspace
app/copilot/discord-bot/: manifest.yml
experiments/lambda/: Dockerfile
experiments/sam/: samconfig.toml  template.yaml
notebooks/: test-langchain.ipynb
